Code overflow fix

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -239,7 +239,7 @@ p.note {
 }
 
 pre {
-	overflow: scroll;
+	overflow: auto;
 }
 
 code {
